images in css on CDN, and fixed weird page height on Firefox and IE

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -100,7 +100,7 @@ div.brand-bar-outer {
 }
 
 div.cfa-logo {
-  background-image: url(../images/cfa-logo-gray.png);
+  background-image: url(#{$image-prefix}images/cfa-logo-gray.png);
   background-repeat: no-repeat;
   background-size: contain;
   height: 34px;
@@ -154,7 +154,7 @@ a.mobile-logo {
   }
 
   #logo {
-    background-image: url(../images/cfa-logo-black.png);
+    background-image: url(#{$image-prefix}images/cfa-logo-black.png);
     background-size:contain;
     background-repeat: no-repeat;
     background-position: left center;
